<resources>
    <string name="app_name">Aao Baat Karain</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">User Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_urdu">آؤ بات کریں</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search_users_here">Search users here...</string>
    <string name="write_message_here">write message here...</string>
    <string name="testing_message">Testing Message</string>
    <string name="seen">seen</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="send_message">SEND MESSAGE</string>
</resources>