<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/name_app_registe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_urdu"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorFont"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_white"
                android:layout_marginEnd="20dp"
                android:text="@string/signup"
                android:textColor="@color/colorFont" />
            <Button
                android:id="@+id/btn_login"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_white"
                android:text="@string/login"
                android:textColor="@color/colorFont" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorFont"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

</LinearLayout>